--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,3 +47,11 @@ jobs:
       # Build our source files with the TypeScript compiler
       - name: build
         run: npm run build
+      
+        # Publish to the NPM Registry
+      - name: publish (npm)
+        uses: primer/publish@v2.0.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          args: "--dry-run -- --unsafe-perm"
